# cv

./: .gitignore  .latexindent.yaml  .pre-commit-config.yaml  Lebenslauf.tex  Makefile  README.md  README_EN.md  Readme.md  renovate.json
.github/workflows/: build-and-release.yml  pre-commit.yml
scripts/: main.py  pyproject.toml
scripts/src/cv_tools/: __init__.py  extract_current.py
