[project]
name = "cv-tools"
version = "0.1.0"
description = "LaTeX CV processing tools for release notes"
requires-python = ">=3.9"
dependencies = [
    "TexSoup>=0.3.1",
]

[project.scripts]
extract-current = "cv_tools.extract_current:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Skip assert_used test

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.black]
line-length = 88
target-version = ['py39']
